fix navbar format of buttons, to test on mobile

--- a/static/css/FeelzApp.css
+++ b/static/css/FeelzApp.css
@@ -8,9 +8,18 @@
  */
 
 
- /* body padding for the fixed navibar */
+ /* formatting for the navigation bar
+  *
+  * padding for space for fixed to top
+  * fix margins for aligning right
+  */
 body { 
 	padding-top: 70px; 
+}
+
+.navbar-header {
+  margin-left:5px;
+  width:99%;
 }
 
  /* post classes */
